# duetto

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CONTEXT.md  DEFINITION_OF_DONE.md  DEFINITION_OF_READY.md  README.md  VISION.md  cliff.toml  lefthook.yml  lwpt.cfg  lwpt.toml  skills-lock.json
.github/workflows/: ci.yml  pr.yml
docs/: architecture.md  code-style.md  comparison.md  deployment.md  quick-start.md  tooling.md
docs/adr/: 0001-completion-shaped-backend-seam.md  0002-network-framework-backend-macos.md  0003-transport-execution-context.md
source/: WS.Client.pas  WS.Deflate.pas  WS.Protocol.pas  WS.Server.pas  WS.Utf8.Test.pas  WS.Utf8.pas
source/apps/: wsautobahn.pas  wsbench.pas  wsecho.pas  wsinterop.pas  wsprobe.pas
source/units/: WS.Client.pas  WS.Deflate.Test.pas  WS.Frame.Test.pas  WS.Frame.pas  WS.Handshake.Test.pas  WS.Handshake.pas  WS.Protocol.Test.pas  WS.Protocol.pas  WS.Server.pas  WS.Transport.Epoll.pas  WS.Transport.Iocp.pas  WS.Transport.NetworkFramework.pas  WS.Transport.pas
src/: wsecho.pas  wsinterop.pas  wsprobe.pas
tests/autobahn/: fuzzingclient.json  fuzzingserver.json
tools/: autobahn-check.py  autobahn.sh  benchmatrix.sh  crosscheck.py  deflbench.py  pyecho.py
tools/rust-echo/: Cargo.toml
tools/rust-echo/src/: main.rs
